--- a/assets/sass/_detailPanel.scss
+++ b/assets/sass/_detailPanel.scss
@@ -95,6 +95,7 @@
 #ap_annotation_sourceinfo td{
   border-left:2px solid #ababab;
   padding:0 .5rem 0 .3rem;
+  white-space: nowrap;
 }
 #ap_annotation_sourceinfo {
 	font-family: sans-serif;
